Tweak warning text for restricted method access
Reviewed-by: sundar